Bug 150666 - Insert a row in the table after delete it but won't be deleted. (If Track changes is active.)
Summary: Insert a row in the table after delete it but won't be deleted. (If Track cha...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.2
Keywords: bibisectRequest, filter:odt, regression
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2022-08-29 11:30 UTC by NISZ LibreOffice Team
Modified: 2022-09-26 10:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file for testing (16.50 KB, application/vnd.oasis.opendocument.text)
2022-08-29 11:31 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-08-29 11:30:18 UTC
Description:
If I create a new row in the table with "Insert rows above/below" button, and after that I want to delete this new empty row with "Delete selected rows" button the selected row won't be deleted if the track changes is active.

Steps to Reproduce:
1. Open attached file.
2. Select a row in the table.
3. Click on the "Insert rows above/below" button.
4. Select the new empty row.
5. Click on the "Delete selected rows" button.

Actual Results:
The row which I insert in the table and empty, I can't delete it with the "Delete selected rows" button.

Expected Results:
I can delete the inserted new empty row.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: b323f1fba2a7a409177f5296c6ba8b98c9e537ad
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2022-08-29 11:31:12 UTC
Created attachment 182073 [details]
sample file for testing
Comment 2 raal 2022-08-29 16:21:42 UTC
Confirm with Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 27892a5e12dada80226f778ab2bd14b1bdaab58a
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

but not in Version 4.1.0.0.alpha0+
Comment 3 raal 2022-08-29 16:45:02 UTC
bisected with linux-64-7.4. In oldest version I could delete inserted row with three clicks on Delete selected rows button.

 010d436fffee1f0a868b456308138e86ea154e2b is the first bad commit
commit 010d436fffee1f0a868b456308138e86ea154e2b
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Wed Feb 16 21:23:08 2022 +0100

    source 95213407dfcbf34056037d60243ff915340d1a2e

https://git.libreoffice.org/core/+/95213407dfcbf34056037d60243ff915340d1a2e

Adding CC to: László Németh
Comment 4 Commit Notification 2022-09-07 09:54:24 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b251228d2e5e2832e0a617213173e8841f5b7428

tdf#150666 sw: allow to delete tracked table row insertions

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2022-09-09 10:49:41 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/c46ab9ff1e6bd53881e5f9dfdf9f44e030a93d2b

tdf#150666 sw: allow to delete tracked table row insertions

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 NISZ LibreOffice Team 2022-09-26 10:21:08 UTC
Verified in:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: d3050ff4a1355f7ebd3d4e7ddc8fb64f2b8894dd
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded