tdf#150666 sw: allow to delete tracked table row insertions

It was not possible to delete tracked table row insertions,
if only those were selected, or if they were own insertions.

Regression from commit 95213407dfcbf34056037d60243ff915340d1a2e
"tdf#146622 sw crash fix: don't delete already deleted rows".

Change-Id: Idd3bc78bca1c76bceba63cf339c6d8c73f8f9508
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139575
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>